--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.23.1",
     "react-tsparticles": "^2.12.2"
   },
