--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.14",
-    "vite": "^5.3.5"
+    "nodemailer": "^6.9.14"
   }
 }
