--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,5 +32,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "rollup": "^4.20.0",
     "vite": "^5.3.5"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
