--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.14"
-  },
-  "devDependencies": {
-    "rollup": "^4.20.0"
+    "nodemailer": "^6.9.14",
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
