--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "rollup": "^4.20.0",
-    "vite": "^5.3.5"
+    "vite": "^5.3.5",
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
