added rollup stuff

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "express": "^4.19.2",
     "nodemailer": "^6.9.14",
     "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
+  "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
