--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,11 @@
     "react-router-dom": "^6.23.1",
     "@rollup/rollup-linux-x64-gnu": "4.6.1"
   },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
