--- a/backend/package.json
+++ b/backend/package.json
@@ -14,15 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.14",
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
-  },
-  "overrides": {
-    "vite": {
-      "rollup": "npm:@rollup/wasm-node"
-    }
-  },
-  "devDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    "nodemailer": "^6.9.14"
   }
 }
