--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "npm run build" # Adjust this to the appropriate build command for your frontend
-  publish = "frontend/dist" # Directory to deploy
-  functions = "functions"
+  publish = "/dist" # Directory to deploy
+  functions = "../functions"
 
 [[redirects]]
   from = "/*"
