--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,9 @@
 [build]
   command = "npm run build" # Adjust this to the appropriate build command for your frontend
   publish = "/dist" # Directory to deploy
-  functions = "../functions"
+
+[functions]
+  directory = "../functions"
 
 [[redirects]]
   from = "/*"
